# Aether

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conandata.yml
.github/workflows/: PushRelease.yml
conan/: linux_profile  windows_profile
inc/Aether/Core/: Application.hpp  Vectorum.hpp
inc/Aether/Core/Contexts/: AppContext.hpp  VulkanContext.hpp
inc/Aether/Core/Render/: Buffer.hpp  RenderProcess.hpp  Renderer.hpp  Shader.hpp  Vertext.hpp
inc/Aether/Core/ServiceLocator/: ServiceLocator.hpp
inc/Aether/Core/Services/: Clock.hpp  Swapchain.hpp
scr/: buildShaders.ps1
shaders/: default.frag.glsl
src/: main.cpp
src/Core/: Application.cpp
src/Core/Contexts/: VulkanContext.cpp
src/Core/Render/: Buffer.cpp  RenderProcess.cpp  Renderer.cpp  Shader.cpp
src/Core/ServiceLocator/: ServiceLocator.cpp
src/Core/Services/: Clock.cpp  Swapchain.cpp
